--- a/css/style.css
+++ b/css/style.css
@@ -240,7 +240,7 @@ figure {
   height: 100%;
 }
 #fixed {
-  background-image: url('../img/pcnotes.jpg');
+  background-image: url('../img/fixedImage.png');
   position: fixed;
   display: block;
   top: 0;
